# adl2gestalt

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  adl_parser.py  pyproject.toml  test_ca.ui
docs/: CONVERSION.md  CONVERSION_ISSUES.md  MEDM_DOC.md  PLAN.md  PROJECT.md
examples/: 29ID_ca_all.adl  29id_Diagnostics.adl  IEXMachinePhysics.adl  test_absolute.yml  test_output.ui  test_output.yml
examples/converted_yml/: 29id_BL_User.yml  29id_Diagnostics.yml  IEXMachinePhysics.yml  TestDisplay.yml  TestDisplay2.yml  TestDisplay3.yml
examples/generated_ui/: 29ID_ca_all.ui  29ID_ca_all_manual.ui  29ID_ca_all_relative.ui  29ID_ca_all_simple.ui  29ID_ca_all_test.ui  29ID_ca_all_xywh.ui  29id.ui  29id_BL_User.ui  29id_Diagnostics.ui  IEXMachinePhysics.ui  TestDisplay.ui  TestDisplay2.ui  TestDisplay3.ui  TestDisplay_relative.ui  TestWithInclude.ui  granite_cssi.ui  pv-control.ui  test_absolute.ui  test_simple.ui
examples/gestalt_converted/: 29ID_ca_all.yml  29ID_ca_all_fixed.yml  29id.yml  29id_BL_User.yml  29id_Diagnostics.yml  IEXMachinePhysics.yml  TestDisplay.yml  TestDisplay2.yml  TestDisplay3.yml  TestDisplay_new.yml  TestWithInclude.yml
examples/gestalt_examples/: flight_path_control.yml  granite_cssi.yml  granite_gixs.yml  maskAperture.yml  scientaHV.yml  test_simple.yml
examples/gestalt_examples/motors/: Makefile
examples/gestalt_examples/widgets/: embedded-ao.yml  embedded-ao_mdw.yml  filter-line.yml  ops-panels.yml  ops-panels_29.yml  ops-panels_29_old.yml  ops-slice.yml  pv-control.yml
examples/medm/: 29id.yml
examples/medm_examples/: 29id.adl  29id_BL_User.adl  TestDisplay.adl  TestDisplay2.adl  TestDisplay3.adl  TestWithInclude.adl
src/adl2gestalt/: __init__.py  cli.py  converter.py  gestalt_main.py  gestalt_runner.py  parser.py  scanner.py  symbols.py  widget_mapper.py
tests/: conftest.py  test_gestalt_integration.py
tests/fixtures/: sample_data.yml  sample_gestalt.yml  sample_medm.adl
